# Voice_Agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  REFACTOR_PLAN.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_dial.py  test_dial2.py  test_dial3.py  test_dial4.py  test_dial5.py  test_get_assistant.py  test_vapi.py
app/core/: config.py  dependencies.py  security.py
app/db/: database.py  models.py
app/routers/: __init__.py  auth.py  calls.py  campaigns.py  contacts.py  users.py  webhook.py  webhooks.py
app/schemas/: auth.py  campaigns.py  contacts.py  responses.py  users.py
app/services/: vapi_service.py  ws_manager.py
app/utils/: __init__.py  exceptions.py  http_client.py  vapi_client.py  vapi_ws_bridge.py
frontend/: boneyard.config.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/test/: page.tsx
frontend/src/bones/: campaign-create.bones.json  registry.js  registry.ts
frontend/src/components/: CallDetail.tsx  DashboardLayoutClient.tsx  FloatingDialer.tsx
frontend/src/components/shared/: AuthShell.tsx
frontend/src/hooks/: index.ts  useCallStream.ts  useLiveAudio.ts
frontend/src/lib/: auth.ts  utils.ts
frontend/src/store/: hooks.ts  index.ts
frontend/src/store/api/: allApis.ts  baseApi.ts
frontend/src/store/slices/: activeCallSlice.ts  authSlice.ts  callsSlice.ts  uiSlice.ts
frontend/src/types/: index.ts
(+9 files in other folders)
